my-app/src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

nav {
  background: #25A96F;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
  height: 100px;
  width: 100%;
  top: 0px;
  position: absolute;
}

.shirt{
  left: 10px;
  position: absolute;
  display: inline-block;
  width: 100px;
}

.homep{
  margin: 0px;
  height: 713px;
  background-color: #25A96F;

}


.bodyofhome{
  position: absolute;
  align-content: center;
  height: 500px;
  width: 1530px;
  overflow: hidden;
}

.hometextmain{
  text-align: center;
  font-family: 'Share Tech Mono';
  font-style: normal;
  font-weight: 400;
  font-size: 120px;
  line-height: 135px;
  text-align: center;
  letter-spacing: 0.1em;

color: #F7F3F3;

mix-blend-mode: normal;
text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
}


.hometextsecondary{
  /* ThriftAid is an application that links thrift stores and homeless shelters, with the goal of reducing waste. Thrift stores with excess clothes can post a listing (with options for pick up or delivery), and a nearby homeless shelter can choose to accept it. */
top: 70%;
position: absolute;
font-family: 'Noto Sans';
font-style: normal;
font-weight: 600;
font-size: 12px;
line-height: 25px;
text-align: center;
letter-spacing: 0.05em;

color: #FFFFFF;

mix-blend-mode: normal;

}

.ellipse1{
  /* Ellipse 1 */

position: absolute;
width: 600px;
height: 600px;
left: -120px;
top: -220px;
border-radius: 50%;
background: rgba(120, 240, 187, 0.21);
box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.15);
}

.ellipse2{
  /* Ellipse 2 */

position: absolute;
width: 500px;
height: 600px;
left: 1050px;
top: -250px;
border-radius: 50%;
background: rgba(120, 240, 187, 0.28);
box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.15);
overflow: hidden;


}

